fixed whitespace bug

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,6 @@
     contain: paint;
 }
 
-body{
-    height: 100%;
+html{
+    overflow-x: hidden;
 }
